# QtJsonSerializer

./: CMakeLists.txt  Config.cmake.in  README.md
Example/: CMakeLists.txt  main.cpp  qobjecttester.h  testwidget.h
Source/: CMakeLists.txt
Source/QtJsonSerializer/: cborserializer.cpp  jsonserializer.cpp  qjsonconverterreg_hook.cpp  serializerbase.cpp
Source/QtJsonSerializer/typeconverters/: bitarrayconverter.cpp  bitarrayconverter_p.h  bytearrayconverter.cpp  bytearrayconverter_p.h  cborconverter.cpp  cborconverter_p.h  datetimeconverter.cpp  datetimeconverter_p.h  enumconverter.cpp  enumconverter_p.h  gadgetconverter.cpp  gadgetconverter_p.h  geomconverter.cpp  geomconverter_p.h  legacygeomconverter.cpp  legacygeomconverter_p.h  listconverter.cpp  listconverter_p.h  localeconverter.cpp  localeconverter_p.h  mapconverter.cpp  mapconverter_p.h  multimapconverter.cpp  multimapconverter_p.h  objectconverter.cpp  objectconverter_p.h  pairconverter.cpp  pairconverter_p.h  smartpointerconverter.cpp  smartpointerconverter_p.h  stdchronodurationconverter.cpp  stdchronodurationconverter_p.h  stdoptionalconverter.cpp  stdoptionalconverter_p.h  stdtupleconverter.cpp  stdtupleconverter_p.h  stdvariantconverter.cpp  stdvariantconverter_p.h  versionnumberconverter.cpp  versionnumberconverter_p.h
